[project]
name = "yandex-music-tools"
version = "1.0.0"
description = "Yandex Music Tools"
authors = [
    { name = "Danil Ovchinnikov", email = "danil42worker@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "yandex-music @ git+https://github.com/Danil42Russia/yandex-music-api.git@danil42russia/python3.13_support",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    "test",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "PL", # pylint
    "RUF", # ruff-specific-rules
    "UP", # pyupgrade
]
ignore = [
    "RUF001",
    "RUF002",
    "PLC0415",
]

[tool.mypy]
python_version = 3.13
strict = true

[[tool.mypy.overrides]]
module = [
    'yandex_music.*',
]
ignore_missing_imports = true
